// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Client /> should render <Loader /> then new page 1`] = `
.c2 {
  margin: 2rem 0;
  -webkit-animation: jitEcr 800ms ease-in-out infinite alternate;
  animation: jitEcr 800ms ease-in-out infinite alternate;
}

.c2:after {
  background: var(--primary);
  border-radius: 50%;
  content: '';
  display: block;
  height: 1rem;
  width: 1rem;
  margin: 0 auto;
}

.c1 {
  grid-column: 1 / -1;
}

.c0 {
  display: grid;
  grid-template-columns: repeat(var(--grid-number-column-small),1fr);
  grid-gap: 2rem;
  max-width: var(--container-max-width);
  margin: 0 auto;
  padding: 2rem;
}

@media (min-width:800px) {

}

@media (min-width:800px) {

}

@media (min-width:800px) {

}

@media (min-width:800px) {
  .c0 {
    grid-gap: 0 2rem;
    grid-template-columns: repeat(var(--grid-number-column-large),1fr);
    padding-top: 4rem;
  }
}

<div>
  <main
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      />
    </div>
  </main>
</div>
`;

exports[`<Client /> should render <Photos /> 1`] = `
.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: none;
  cursor: pointer;
  outline: none;
  padding: 1rem 1.2rem 1.1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: white;
  border: 1px solid var(--gray-1);
  display: inline-block;
  font-family: 'Roboto',Arial,sans-serif;
  width: 4.2rem;
  color: var(--text);
  font-size: 1.6rem;
  font-weight: 700;
  will-change: border-color;
  -webkit-transition: border-color 150ms ease-out;
  transition: border-color 150ms ease-out;
}

.c7:hover {
  border-color: var(--gray-3);
}

.c1 {
  grid-row-start: 1;
  grid-column: 1 / span 6;
  margin: 0;
}

.c5 {
  grid-row-start: 2;
  grid-column: 1 / span 6;
  margin: 0;
}

.c3 {
  font-size: 1.2rem;
}

.c4 {
  color: var(--gray-2);
  display: block;
  font-size: 1rem;
  font-style: italic;
  margin: 0.4rem 0 0;
}

.c2 {
  background: var(--gray-4);
  position: relative;
  padding-top: calc(0.666667 * 100%);
  width: 100%;
  margin: 0 0 1rem;
}

.c6 {
  grid-column: 1 / -1;
  margin: 0;
  padding: 0;
  text-align: center;
}

.c6 > li {
  display: inline-block;
  margin: 0 0.5rem;
}

.c0 {
  display: grid;
  grid-template-columns: repeat(var(--grid-number-column-small),1fr);
  grid-gap: 2rem;
  max-width: var(--container-max-width);
  margin: 0 auto;
  padding: 2rem;
}

@media (min-width:800px) {
  .c1 {
    grid-column: calc(var(--grid-number-column-large) - 8) / span 8;
  }

  .c1 + figure {
    margin-top: 20rem;
  }
}

@media (min-width:800px) {
  .c5 {
    grid-column: 3 / span 8;
  }

  .c5 + figure {
    margin-top: 20rem;
  }
}

@media (min-width:800px) {
  .c6 {
    margin: 8.5rem 0;
  }
}

@media (min-width:800px) {
  .c0 {
    grid-gap: 0 2rem;
    grid-template-columns: repeat(var(--grid-number-column-large),1fr);
    padding-top: 4rem;
  }
}

<div>
  <main
    class="c0"
  >
    <figure
      class="c1"
    >
      <div
        class="c2"
      />
      <figcaption
        class="c3"
      >
        <span />
        <span
          class="c4"
        >
          Février 2019
        </span>
      </figcaption>
    </figure>
    <figure
      class="c5"
    >
      <div
        class="c2"
      />
      <figcaption
        class="c3"
      >
        <span />
        <span
          class="c4"
        >
          Janvier 2019
        </span>
      </figcaption>
    </figure>
    <ul
      class="c6"
    >
      <li>
        <button
          class="sc-AykKC c7"
          title="Next page"
        >
          »
        </button>
      </li>
      <li>
        <button
          class="sc-AykKC c7"
          title="Last page"
        >
          »»
        </button>
      </li>
    </ul>
  </main>
</div>
`;

exports[`<Client /> should render <Welcome /> 1`] = `
.c2 {
  font-size: 3rem;
  margin: 0 0 3rem;
}

.c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--primary);
}

.c3:hover,
.c3:focus {
  border-bottom: 1px solid var(--primary);
}

.c1 {
  grid-column: 1 / -1;
  padding: 6rem 0;
}

.c1 > p {
  font-size: 1.8rem;
}

.c0 {
  display: grid;
  grid-template-columns: repeat(var(--grid-number-column-small),1fr);
  grid-gap: 2rem;
  max-width: var(--container-max-width);
  margin: 0 auto;
  padding: 2rem;
}

@media (min-width:800px) {
  .c0 {
    grid-gap: 0 2rem;
    grid-template-columns: repeat(var(--grid-number-column-large),1fr);
    padding-top: 4rem;
  }
}

<div>
  <main
    class="c0"
  >
    <div
      class="c1"
    >
      <h1
        class="c2"
      >
        Welcome to your Journal 🎉
      </h1>
      <p>
        Go to your 
        <a
          class="sc-fzXfLS c3"
          href="/admin"
        >
          admin
        </a>
         to publish your first photo
      </p>
    </div>
  </main>
</div>
`;
